--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
+
 #root {
-    height: 100vh;
-  }
+  height: 100%;
+  /* background-image: linear-gradient(to right, #28313B, #485461); */
+}
