--- a/src/pages/homepage/HomePage.css
+++ b/src/pages/homepage/HomePage.css
@@ -1,8 +1,7 @@
-
-
-.pageContainer{
-    background-image: linear-gradient(to right, #28313B , #485461);
-    height: 100vh;
+.pageContainer {
+    /* background-image: linear-gradient(to right, #28313B, #485461); */
+    /* height: 100vh; */
     position: relative;
-    
+    /* height: 1000px; */
+
 }
