--- a/src/components/introduction/Introduction.css
+++ b/src/components/introduction/Introduction.css
@@ -1,15 +1,73 @@
-.containerIntro {
-    height: '100vh';
-    min-height : '100vh';
-    display: flex;
-    align-content: center;
-    
+@media screen and (min-width: 1310px) {
+    .containerIntro {
+        height: '100vh';
+        min-height: '100vh';
+        display: flex;
+        align-content: center;
+
+    }
+
+    .containerBox {
+        display: flex;
+
+        justify-content: center;
+        flex-direction: column;
+        color: azure;
+    }
+
+    .flex-container {
+        display: flex;
+
+
+    }
+
+    .flex-container__text {
+        color: black;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        /* font-style: normal; */
+        /* font-size: 2.5em; */
+
+    }
+
+    .textHead {
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-style: normal;
+        font-size: 2.5em;
+    }
+
+    .flex-container__text-body {
+        margin-top: 24px;
+        font-weight: lighter;
+    }
+
+
+    .intro-abstract {
+        background-image: url("../../assets/images/abstract-intro.png");
+        min-height: auto;
+        min-width: auto;
+        height: 100vh;
+        width: 100vw;
+        max-width: 700px;
+        max-height: 92vh;
+    }
+
+    .icon-strip {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+    }
 }
 
-.containerBox {
-    display: flex;
-    padding: 24px;
-    justify-content: center;
-    flex-direction: column;
-    color: azure;
+@media screen and (max-widht: 1310px) {
+    .containerBox {
+        display: grid;
+
+        justify-content: center;
+        flex-direction: column;
+        color: azure;
+    }
+
+    .flex-container__text {
+        color: black;
+    }
 }
