--- a/src/components/introduction/Introduction.css
+++ b/src/components/introduction/Introduction.css
@@ -23,14 +23,15 @@
 
     .flex-container__text {
         color: black;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-weight: 400;
+        font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
         /* font-style: normal; */
         /* font-size: 2.5em; */
 
     }
 
     .textHead {
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
         font-style: normal;
         font-size: 2.5em;
     }
